--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
                     <div class="article-container">
                         <img src="./assets/project-2.png" alt="Project 2" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project Two</h2>
+                    <h2 class="experience-sub-title project-title">Gmail Diary</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/prannav-s'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/prannav-s/email-tracker'">
                             Github
                         </button>
                     </div>
