--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                     <div class="details-container">
                         <img src="./assets/experience.png" alt="experience icon" class="icon">
                         <h3>Experience</h3>
-                        <p>Python, Java, C, HTML, CSS, and JavaScript <br>SureStart and Duke University Machine Learning</p>
+                        <p>SureStart<br>Duke University Machine Learning</p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/education.png" alt="education icon" class="icon">
                         <h3>Duke University</h3>
-                        <p>B.A. Computer Science <br>B.S.E. Biomedical Engineering</p>
+                        <p>B.S. Computer Science <br>B.S.E. Biomedical Engineering</p>
                     </div>
                 </div>
                 <div class="text-container">
