--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="details-container color-container">
+                <!-- <div class="details-container color-container">
                     <div class="article-container">
                         <img src="./assets/project-3.png" alt="Project 3" class="project-img">
                     </div>
@@ -236,7 +236,7 @@
                             Github
                         </button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'">
