updated resume and Velorama + GASTON was added as a project

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <img src="./assets/profile-pic.png" alt="Prannav Shankar profile picture">
         </div>
         <div class="section__text">
-            <p class="section__text__p1">Hello, I'm</p>
+            <p class="section__text__p1">Hello! I'm</p>
             <h1 class="title">Prannav Shankar</h1>
             <p class="section__text__p2">Full-Stack Developer</p>
             <div class="btn-container">
@@ -226,17 +226,21 @@
                         </button>
                     </div>
                 </div>
-                <!-- <div class="details-container color-container">
+                <div class="details-container color-container">
                     <div class="article-container">
                         <img src="./assets/project-3.png" alt="Project 3" class="project-img">
+                        <!-- <img src="./assets/project-3 (2).png" alt="Project 3" class="project-img"> -->
                     </div>
-                    <h2 class="experience-sub-title project-title">Project Three</h2>
-                    <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/prannav-s'">
-                            Github
+                    <h2 class="experience-sub-title project-title">Velorama + GASTON</h2>
+                    <div id="project-3-btn" class="btn-container">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://cb.csail.mit.edu/velorama/'">
+                            Velorama
+                        </button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://gaston.readthedocs.io/en/latest/index.html#'">
+                            GASTON
                         </button>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
         <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'">
