--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="details-container">
                         <img src="./assets/experience.png" alt="experience icon" class="icon">
                         <h3>Experience</h3>
-                        <p>SureStart<br>Duke University Machine Learning</p>
+                        <p>MITRE<br>Duke University Machine Learning</p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/education.png" alt="education icon" class="icon">
@@ -76,7 +76,12 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        Hello! I'm Prannav Shankar, a Junior at Duke University with a double major in Computer Science and Biomedical Engineering. Proficient in Python, Java, C, HTML, CSS, SQL, and JavaScript, I have practical experience working on projects that showcase my coding skills. I've contributed to Perspectify, a website utilizing Python, HTML, CSS, Django, Google API, and OpenAI API to summarize articles and recommend alternative articles on the same topic. Currently, I'm also engaged in machine learning research at the Singh Lab, specifically focusing on Velorama, a Python-based tool for RNA velocity analysis. This hands-on experience allows me to apply my skills in a real-world context, further enhancing my contribution to the dynamic fields of software engineering and biomedical innovation.                    </p>
+                        Hello! I'm Prannav Shankar, a Senior at Duke University with a double major in Computer Science and Biomedical Engineering. 
+                        Proficient in Python, Java, C, HTML, CSS, SQL, and JavaScript, I have practical experience working on projects that showcase my coding skills. 
+                        I've contributed to Perspectify, a website utilizing Python, HTML, CSS, Django, Google API, and OpenAI API to summarize articles and recommend alternative articles on the same topic. 
+                        I also engaged in machine learning research at the Singh Lab, where I developed <a href="https://www.biorxiv.org/content/10.1101/2025.03.19.644241v2">GLACIER</a>. 
+                        I am currently a Full-Stack SWE at MITRE.
+                        This hands-on experience allows me to apply my skills in a real-world context, further enhancing my contribution to the dynamic fields of software engineering and biomedical innovation.                    </p>
                 </div>
             </div>
         </div>
@@ -217,11 +222,11 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-2.png" alt="Project 2" class="project-img">
+                        <img src="./assets/project-2.png" alt="Project 2" class="project-img project-2-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Gmail Diary</h2>
+                    <h2 class="experience-sub-title project-title">SAGEDiff</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/prannav-s/email-tracker'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/BME590-AIxBio/team_5/tree/main/project_4#readme'">
                             Github
                         </button>
                     </div>
@@ -270,7 +275,7 @@
                 </ul>
             </div>
         </nav>
-        <p>Copyright &#169; 2023 Prannav Shankar. All Rights Reserved.</p>
+        <p>Copyright &#169; 2025 Prannav Shankar. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
