changes to project styling

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="details-container color-container">
+                <div class="details-container color-container project-2">
                     <div class="article-container">
                         <img src="./assets/project-2.png" alt="Project 2" class="project-img project-2-img">
                     </div>
