upddated project links

--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
                     <div class="article-container">
                         <img src="./assets/project-2.png" alt="Project 2" class="project-img project-2-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">SAGEDiff</h2>
+                    <h2 class="experience-sub-title project-title">SAGEdiff</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/BME590-AIxBio/team_5/tree/main/project_4#readme'">
-                            Github
+                        <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/SAGEdiff.pdf')">
+                            Paper
                         </button>
                     </div>
                 </div>
@@ -236,14 +236,15 @@
                         <img src="./assets/project-3.png" alt="Project 3" class="project-img">
                         <!-- <img src="./assets/project-3 (2).png" alt="Project 3" class="project-img"> -->
                     </div>
-                    <h2 class="experience-sub-title project-title">Velorama + GASTON</h2>
+                    <h2 class="experience-sub-title project-title">GLACIER</h2>
                     <div id="project-3-btn" class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://cb.csail.mit.edu/velorama/'">
-                            Velorama
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/rohitsinghlab/glacier'">
+                            Github
                         </button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://gaston.readthedocs.io/en/latest/index.html#'">
-                            GASTON
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://www.biorxiv.org/content/10.1101/2025.03.19.644241v2'">
+                            Paper
                         </button>
+
                     </div>
                 </div>
             </div>
