updated about me

--- a/index.html
+++ b/index.html
@@ -77,10 +77,9 @@
                 <div class="text-container">
                     <p>
                         Hello! I'm Prannav Shankar, a Senior at Duke University with a double major in Computer Science and Biomedical Engineering. 
-                        Proficient in Python, Java, C, HTML, CSS, SQL, and JavaScript, I have practical experience working on projects that showcase my coding skills. 
-                        I've contributed to Perspectify, a website utilizing Python, HTML, CSS, Django, Google API, and OpenAI API to summarize articles and recommend alternative articles on the same topic. 
-                        I also engaged in machine learning research at the Singh Lab, where I developed <a href="https://www.biorxiv.org/content/10.1101/2025.03.19.644241v2">GLACIER</a>. 
-                        I am currently a Full-Stack SWE at MITRE.
+                        Proficient in Python, Java, C, HTML, CSS, SQL, and JavaScript, I have practical experience working on projects that showcase my coding skills. I am currently a Full-Stack SWE at MITRE.
+                        I engaged in machine learning research at the Singh Lab, where I developed <a href="https://www.biorxiv.org/content/10.1101/2025.03.19.644241v2">GLACIER</a>.
+                        I've also contributed to Perspectify, a website utilizing Python, HTML, CSS, Django, Google API, and OpenAI API to summarize articles and recommend alternative articles on the same topic. 
                         This hands-on experience allows me to apply my skills in a real-world context, further enhancing my contribution to the dynamic fields of software engineering and biomedical innovation.                    </p>
                 </div>
             </div>
