--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="details-container">
                         <img src="./assets/experience.png" alt="experience icon" class="icon">
                         <h3>Experience</h3>
-                        <p>MITRE<br>Duke University Machine Learning</p>
+                        <p>Full-Stack SWE Intern @ MITRE<br />Machine Learning @ Duke (Singh Lab)</p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/education.png" alt="education icon" class="icon">
@@ -76,11 +76,15 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        Hello! I'm Prannav Shankar, a Senior at Duke University with a double major in Computer Science and Biomedical Engineering. 
-                        Proficient in Python, Java, C, HTML, CSS, SQL, and JavaScript, I have practical experience working on projects that showcase my coding skills. I am currently a Full-Stack SWE at MITRE.
-                        I engaged in machine learning research at the Singh Lab, where I developed <a href="https://www.biorxiv.org/content/10.1101/2025.03.19.644241v2">GLACIER</a>.
-                        I've also contributed to Perspectify, a website utilizing Python, HTML, CSS, Django, Google API, and OpenAI API to summarize articles and recommend alternative articles on the same topic. 
-                        This hands-on experience allows me to apply my skills in a real-world context, further enhancing my contribution to the dynamic fields of software engineering and biomedical innovation.                    </p>
+                        I’m a Senior at Duke double-majoring in Computer Science and Biomedical Engineering. Recently at
+                        <strong>MITRE</strong> I built secure internal tools used by thousands of federal agents—owning Flask Blueprint
+                        endpoints, <strong>Keycloak</strong> SSO & group integration, <strong>SQLAlchemy/Alembic</strong> migrations, and a
+                        <strong>PostgreSQL</strong> backend with a <strong>jQuery/AJAX + Foundation 6</strong> front-end. I also prototyped
+                        ML features (e.g., <strong>LightGBM</strong> phishing detection) and optimized UI performance.
+                        At Duke’s <strong>Singh Lab</strong>, I co-developed <a href="https://www.biorxiv.org/content/10.1101/2025.03.19.644241v2" target="_blank" rel="noopener">GLACIER</a>
+                        for spatial DAG analysis of the cerebellum, and I’ve shipped end-to-end web apps like <strong>MyMealMate</strong> and
+                        <strong>Perspectify</strong> to production. I love hard problems, learning new skills, and turning research ideas
+                        into real, reliable software.
                 </div>
             </div>
         </div>
@@ -212,10 +216,13 @@
                     <div class="article-container">
                         <img src="./assets/project-1.png" alt="Perspectify" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Perspectify</h2>
+                    <h2 class="experience-sub-title project-title">MyMealMate</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/prannav-s/perspectify'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/prannav-s/meal-tracker'">
                             Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://meal-tracker-lfqt.onrender.com/'">
+                            Live Demo
                         </button>
                     </div>
                 </div>
@@ -225,6 +232,9 @@
                     </div>
                     <h2 class="experience-sub-title project-title">SAGEdiff</h2>
                     <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/prannavshankar/BME590/tree/main/project_4'">
+                            Github
+                        </button>
                         <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/SAGEdiff.pdf')">
                             Paper
                         </button>
