--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
                             <div>
                                 <h3>Java</h3>
-                                <p>Experienced</p>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
@@ -144,7 +144,7 @@
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
                             <div>
                                 <h3>JavaScript</h3>
-                                <p>Basic</p>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                     </div>
@@ -162,14 +162,7 @@
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
                             <div>
-                                <h3>Numpy</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-                            <div>
-                                <h3>Pandas</h3>
+                                <h3>Flask</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
@@ -177,20 +170,27 @@
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
                             <div>
                                 <h3>PyTorch</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                            <div>
+                                <h3>Node.js</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
                             <div>
-                                <h3>Keras</h3>
+                                <h3>React</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
                             <div>
-                                <h3>TensorFlow</h3>
+                                <h3>MongoDB</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
