--- a/index.html
+++ b/index.html
@@ -197,6 +197,13 @@
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
                             <div>
+                                <h3>PostgreSQL</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                            <div>
                                 <h3>Git</h3>
                                 <p>Intermediate</p>
                             </div>
